Follow up for the Bugfix checklist panel. Remove ":" from Bugfix checklist, moved HTTPD to httpd, added the component=mod_name to the "Open bug" link.
git-svn-id: https://svn.apache.org/repos/asf/httpd/httpd/trunk@1741065 13f79535-47bb-0310-9956-ffa450edef68

--- a/docs/manual/style/lang/es.xml
+++ b/docs/manual/style/lang/es.xml
@@ -69,8 +69,8 @@
         <message id="uppercase">ABCDEFGHIJKLMNÑOPQRSTUVWXYZ</message>
         <message id="name-section">Nombre</message>
         <message id="hyphenation">Cesura</message>
-        <message id="foundabug">Bugfix checklist:</message>
-        <message id="httpdchangelog">HTTPD changelog</message>
+        <message id="foundabug">Bugfix checklist</message>
+        <message id="httpdchangelog">httpd changelog</message>
         <message id="httpdknownissues">Known issues</message>
         <message id="httpdreportabug">Report a bug</message>
 
