comented out man build since its now not necesary
git-svn-id: https://svn.apache.org/repos/asf/httpd/httpd/trunk@1741171 13f79535-47bb-0310-9956-ffa450edef68

--- a/docs/manual/style/lang/es.xml
+++ b/docs/manual/style/lang/es.xml
@@ -32,9 +32,11 @@
         <settings>Spanish (Spain), sorting order: international</settings>
     </chm>
 
+   <!-- currently no deployment of non-english man pages
     <man>
         <charset>ISO-8859-1</charset>
     </man>
+-->
 
     <!-- Some strings might be used in other contexts, than stated in the -->
     <!-- comments...                                                      -->
