mod_http2: removing beam mutex when task worker done
git-svn-id: https://svn.apache.org/repos/asf/httpd/httpd/trunk@1741268 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,10 @@
                                                          -*- coding: utf-8 -*-
 Changes with Apache 2.5.0
 
+  *) mod_http2: bucket beams now have safe mutex remove. Used for streams where
+     the task worker has finished and all processing happens in the same
+     thread again. [Stefan Eissing]
+     
   *) mod_proxy, mod_ssl: Handle SSLProxy* directives in <Proxy> sections,
      allowing per backend TLS configuration.  [Yann Ylavic]
 
