--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,10 @@
                                                          -*- coding: utf-8 -*-
 Changes with Apache 2.5.0
 
+  *) mod_http2: scoreboard updates that summarize the h2 session (and replace
+     the last request information) will only happen when the session is idle or 
+     in shutdown/done phase. [Stefan Eissing]
+     
   *) mod_http2: bucket beams now have safe mutex remove. Used for streams where
      the task worker has finished and all processing happens in the same
      thread again. [Stefan Eissing]
