mod_http2: fixes in input/output bucket handling
git-svn-id: https://svn.apache.org/repos/asf/httpd/httpd/trunk@1741414 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES
+++ b/CHANGES
@@ -1,13 +1,19 @@
                                                          -*- coding: utf-8 -*-
 Changes with Apache 2.5.0
 
+  *) mod_http2: fixed a bug that caused mod_proxy_http2 to be called for window
+     updates on requests it had already reported done. Added synchronization
+     on early connection/stream close that lets ongoing requests safely drain
+     their input filters.
+     [Stefan Eissing]
+
   *) mod_http2: scoreboard updates that summarize the h2 session (and replace
      the last request information) will only happen when the session is idle or 
      in shutdown/done phase. [Stefan Eissing]
      
-  *) mod_http2: bucket beams now have safe mutex remove. Used for streams where
-     the task worker has finished and all processing happens in the same
-     thread again. [Stefan Eissing]
+  *) mod_http2: HTTP protocol string reported internally, logged and used in
+     SERVER_PROTOCOL changed to "HTTP/2.0" for HTTP/2 connections. 
+     [Stefan Eissing]
      
   *) mod_proxy, mod_ssl: Handle SSLProxy* directives in <Proxy> sections,
      allowing per backend TLS configuration.  [Yann Ylavic]
