--- a/docs/manual/style/lang/fr.xml
+++ b/docs/manual/style/lang/fr.xml
@@ -73,7 +73,7 @@
         <message id="hyphenation">C&#233;sure</message>
         <message id="foundabug">Traitement des bugs</message>
         <message id="httpdchangelog">Journal des modifications de httpd</message>
-        <message id="httpdknownissues">Probl&agrave;mes connus</message>
+        <message id="httpdknownissues">Probl&#232;mes connus</message>
         <message id="httpdreportabug">Signaler un bug</message>
 
         <!-- Used in description box for directives -->
