--- a/docs/manual/style/lang/fr.xml
+++ b/docs/manual/style/lang/fr.xml
@@ -71,6 +71,10 @@
         <message id="uppercase">ABCDEFGHIJKLMNOPQRSTUVWXYZ</message>
         <message id="name-section">NOM</message>
         <message id="hyphenation">C&#233;sure</message>
+        <message id="foundabug">Bugfix checklist</message>
+        <message id="httpdchangelog">httpd changelog</message>
+        <message id="httpdknownissues">Known issues</message>
+        <message id="httpdreportabug">Report a bug</message>
 
         <!-- Used in description box for directives -->
         <message id="syntax">Syntaxe</message>
