--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,12 @@
                                                          -*- coding: utf-8 -*-
 Changes with Apache 2.5.0
 
+  *) mod_http2: elimination of fixed master connectin buffer for TLS 
+     connections. New scratch bucket handling optimized for TLS write sizes. 
+     File bucket data read directly into scratch buffers, avoiding one
+     copy. Non-TLS connections continue to pass buckets unchanged to the core
+     filters to allow sendfile() usage. 
+  
   *) mod_http2/mod_proxy_http2: h2_request.c is no longer shared between these
      modules. This simplifies building on platforms such as Windows, as module
      reference used in logging is now clear.
