--- a/docs/manual/style/lang/es.xml
+++ b/docs/manual/style/lang/es.xml
@@ -138,12 +138,12 @@
         <message id="sitemap">Mapa del sitio web</message>
 
         <!-- footer line -->
-        <message id="before-license">Licencia bajo los términos de la</message>
+        <message id="before-license">Licencia bajo los términos de</message>
         <message id="after-license"></message>
         <message id="langavail">Idiomas disponibles</message>
 
         <!-- not up to date -->
-        <message id="outofdate">Ésta traducción podría estar
+        <message id="outofdate">Esta traducción podría estar
             obsoleta. Consulte la versión en inglés de la
             documentación para comprobar si se han producido cambios
             recientemente.</message>
@@ -158,7 +158,7 @@
              <p>Esta documentación hace referencia a la versión <strong>2.0</strong> de Apache httpd, que <strong>ya no tiene soporte ni es mantenida</strong>. Actualice,y consulte la versión actual de httpd en su lugar, documentado en:</p>
         </message>
         <message id="retired.current">Versión actual de la documentación de Apache HTTP Server</message>
-        <message id="retired.document">Usted puede seguir <link>éste enlace </link> para ir a la versión actual de este documento.</message>
+        <message id="retired.document">Usted puede seguir <link>este enlace </link> para ir a la versión actual de este documento.</message>
 
     </messages>
 </language>
