--- a/docs/manual/style/lang/es.xml
+++ b/docs/manual/style/lang/es.xml
@@ -153,7 +153,7 @@
         <message id="outofdate">Esta traducción podría estar
             obsoleta. Consulte la versión en inglés de la
             documentación para comprobar si se han producido cambios
-            recientementes.</message>
+            recientemente.</message>
         <!-- directive not translated yet -->
         <message id="nottranslated">The documentation for this directive has
             not been translated yet. Please have a look at the English
