--- a/CHANGES
+++ b/CHANGES
@@ -2,6 +2,17 @@
 
 Changes with Apache 2.4.21
 
+  *) mod_http2: Fix async write issue that led to selection of wrong timeout
+     vs. keepalive timeout selection for idle sessions. [Stefan Eissing]
+     
+  *) mod_http2: checking LimitRequestLine, LimitRequestFields and 
+     LimitRequestFieldSize configurated values for incoming streams. Returning
+     HTTP status 431 for too long/many headers fields and 414 for a too long
+     pseudo header. [Stefan Eissing]
+     
+  *) mod_http2: tracking conn_rec->current_thread on slave connections, so
+     that mod_lua finds the correct one. Fixes PR 59542. [Stefan Eissing]
+     
   *) mod_proxy_http2: new experimental http2 proxy module for h2: and h2c: proxy
      urls. Part of the httpd mod_proxy framework, common settings apply.
      Requests from the same HTTP/2 frontend connection against the same backend
